deploy/k8s/base/sonarqube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  labels:
    app.kubernetes.io/name: sonarqube
    app.kubernetes.io/part-of: kubereats
    app.kubernetes.io/component: code-quality
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarqube
    app.kubernetes.io/part-of: kubereats
  ports:
    - name: http
      port: 9000
      targetPort: http
